# voxure_flet_app

./: .gitattributes  =2.0.0  README.md  build.py  file_version_info.txt  libmpv1.deb  mpii_keyframes.py  pyproject.toml  requirements.txt
src/: best_posture_estimator_model.pth  loading_animation.py  main.py  models.py  mpii_human_pose_v1_sequences_keyframes.mat  requirements.txt  run_dialog_test.py  users.json  vocal_coaching_rag.py
